--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
 
             <div class="setting-content">
-                <span class="setting-p-text">Answer Feedback<br><span class="coming-soon"><i>Coming Soon!</i></span></span>
+                <span class="setting-p-text">Answer Feedback<br><span class="coming-soon"><i>Coming Soon™!</i></span></span>
                 <input type="checkbox" id="answer-feedback"/>
                 <label for="" class="toggle" style="opacity: 0.25;">
                     <div class="slider"></div>
@@ -117,7 +117,7 @@
             </div>
 
             <div class="setting-content">
-                <span class="setting-p-text">Dark Mode<br><span class="coming-soon"><i>Coming Soon!</i></span></span>
+                <span class="setting-p-text">Dark Mode<br><span class="coming-soon"><i>Coming Soon™!</i></span></span>
                 <input type="checkbox" id="dark-mode"/>
                 <label for="" class="toggle" style="opacity: 0.25;">
                     <div class="slider"></div>
