Add social cards, resize title icon, add thumbnail

--- a/index.html
+++ b/index.html
@@ -8,20 +8,31 @@
     <meta charset="UTF-8">
     <meta lang="en">
     <meta name="author" content="Cody Nhan Pham">
-    <title>20 Amino Acids Quiz</title>
-    <link rel="icon" href="./media/meat640.png">
+    <title>20 Amino Acids Quiz - by Cody Nhan Pham</title>
+    <link rel="icon" href="./media/meat128.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600;700&display=swap" rel="stylesheet">
+  
 
-    <meta property="og:title" content="20 Amino Acids Quiz" />
+    <meta property="og:title" content="20 Amino Acids Quiz - by Cody Nhan Pham" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://cyanic.link/20aa" />
-    <meta property="og:image:secure" content="./media/meat640.png" />
+    <meta property="og:url" content="https://cyanic.link/20aa/" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/codynhanpham/20aa/main/media/thumbnail.png" />
+    <meta property="og:image:secure" content="https://raw.githubusercontent.com/codynhanpham/20aa/main/media/thumbnail.png" />
+    <meta property="og:image:width" content="1200">
     <meta property="og:description" content="A responsive and customizable browser-based app that helps you remember the names, structures, and shortcodes of the 20 amino acids." />
   
-    <link rel="canonical" href="https://cyanic.link/20aa">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@CodyNhanPham">
+    <meta name="twitter:creator" content="@CodyNhanPham">
+    <meta name="twitter:title" content="20 Amino Acids Quiz - by Cody Nhan Pham">
+    <meta name="twitter:description" content="A responsive and customizable browser-based app that helps you remember the names, structures, and shortcodes of the 20 amino acids.">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/codynhanpham/20aa/main/media/thumbnail.png">
+
+
+    <link rel="canonical" href="https://cyanic.link/20aa/">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RZ56HFHZH"></script>
