move domain to codynhanpham.com

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta name="twitter:image" content="https://raw.githubusercontent.com/codynhanpham/20aa/main/media/thumbnail.png">
 
 
-    <link rel="canonical" href="https://cyanic.link/20aa/">
+    <link rel="canonical" href="https://codynhanpham.com/20aa/">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RZ56HFHZH"></script>
