add a proper description

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Cody Nhan Pham">
     <title>20 Amino Acids Quiz - by Cody Nhan Pham</title>
     <link rel="icon" href="./media/meat128.png">
+    <meta name="description" content="A responsive and customizable browser-based app that helps you remember the names, structures, and shortcodes of the 20 amino acids.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
