--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
         xmlns:og="https://ogp.me/ns#"
         xmlns:fb="https://www.facebook.com/2008/fbml">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BFS77G1W4V"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-BFS77G1W4V');
+    </script>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <meta charset="UTF-8">
     <meta lang="en">
@@ -32,18 +41,7 @@
     <meta name="twitter:description" content="A responsive and customizable browser-based app that helps you remember the names, structures, and shortcodes of the 20 amino acids.">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/codynhanpham/20aa/main/media/thumbnail.png">
 
-
     <link rel="canonical" href="https://codynhanpham.com/20aa/">
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RZ56HFHZH"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-6RZ56HFHZH');
-    </script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
     
